[workspace]
resolver = "3"
members = ["pow", "pow-macro"]

[workspace.dependencies]
anyhow = "1.0.100"

paste = "1.0.15"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
futures = "0.3.31"
tokio-util = "0.7.18"
async-stream = "0.3.6"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"

clap = { version = "4.5.54", features = ["derive"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
