[package]
name = "protogen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1.0"
prost-reflect = {  version = "0.16.3", features = ["text-format"] }
prost-reflect-build = "0.16.0"
prost-build = "0.14.3"
once_cell = "1.21.3"
prost = "0.14.3"
itertools = "0.14.0"

[dev-dependencies]
assert_tokens_eq = "0.1.0"

[build-dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1.0"
prost-build = "0.14.3"
prost-reflect-build = "0.16.0"
